adding admin and adding book management for admin and fixing some minor error